Fix duplicate registration bug, deregister misbehaving nodes (#14)
* Fix duplicate node bug

* Deregister misbehaving nodes
