# pkg/core/gen/models/protocol_validator_deregistration.go
@@ -1,0 +1,54 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// ProtocolValidatorDeregistration protocol validator deregistration
+//
+// swagger:model protocolValidatorDeregistration
+type ProtocolValidatorDeregistration struct {
+
+	// comet address
+	CometAddress string `json:"cometAddress,omitempty"`
+
+	// pub key
+	// Format: byte
+	PubKey strfmt.Base64 `json:"pubKey,omitempty"`
+}
+
+// Validate validates this protocol validator deregistration
+func (m *ProtocolValidatorDeregistration) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this protocol validator deregistration based on context it is used
+func (m *ProtocolValidatorDeregistration) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ProtocolValidatorDeregistration) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ProtocolValidatorDeregistration) UnmarshalBinary(b []byte) error {
+	var res ProtocolValidatorDeregistration
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
